k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 25RP18224-nzayisenga
  labels:
    owner: 25RP18224-nzayisenga
