k8s/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  namespace: 25RP18224-nzayisenga
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-api
  template:
    metadata:
      labels:
        app: employee-api
    spec:
      containers:
      - name: employee-api
        image: employee-api:25rp18224-nzayisenga
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /employees
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /employees
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: employee-api
  namespace: 25RP18224-nzayisenga
spec:
  selector:
    app: employee-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
